--- a/src/shared/components/virtualized-log-viewer/refractor-log.scss
+++ b/src/shared/components/virtualized-log-viewer/refractor-log.scss
@@ -137,7 +137,7 @@
   }
 
   .token.hash {
-    color: var(--pf-v5-global--palette--gold-400);
+    color: var(--pf-v5-global--palette--gold-500);
     font-family: monospace;
   }
 
